--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@ body, html {
   background-color: #218838;
 }
 
+.earth {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 300px;
+    background: url('https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWxkdng0OGhqaG44OGZoeWZxYnkyNWZjZGd1ZmE4eWVoMzVvMjZ2OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/VI2UC13hwWin1MIfmi/giphy.gif') repeat-x bottom;
+    background-size: cover;
+    z-index: 1;
+    opacity: 0.6;
+  }
+
 .footer {
   position: absolute;
   bottom: 10px;
@@ -67,6 +78,7 @@ body, html {
   </style>
 </head>
 <body>
+    <div class="earth"></div>
   <div class="hero">
     <h1><i class="fas fa-globe-americas"></i> Welcome to the GeoWorld</h1>
     <p>Explore our planet through interactive maps, insightful data, and geographic wonders.</p>
