--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ body, html {
 .earth {
     position: absolute;
     bottom: 0;
-    width: 100%;
-    height: 300px;
+    width: 100vh;
+    height: 300vh;
     background: url('https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWxkdng0OGhqaG44OGZoeWZxYnkyNWZjZGd1ZmE4eWVoMzVvMjZ2OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/VI2UC13hwWin1MIfmi/giphy.gif') repeat-x bottom;
     background-size: cover;
     z-index: 1;
