--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body, html {
 <body>
     <div class="earth"></div>
   <div class="hero">
-    <h1><i class="fas fa-globe-americas"></i> Welcome to the GeoWorld</h1>
+    <h1><i class="fas fa-globe-americas"></i> Welcome to the spatial-ist's webpage, a Geoworld</h1>
     <p>Explore our planet through interactive maps, insightful data, and geographic wonders.</p>
     <button onclick="location.href='explore.html'">Get Started</button>  <!-- note, this won't go anywhere since you don't have an 'explore.html' file -->
   </div>
