--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ body, html {
     bottom: 0;
     width: 100vh;
     height: 100vh;
+    align-items: center;
     background: url('https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWxkdng0OGhqaG44OGZoeWZxYnkyNWZjZGd1ZmE4eWVoMzVvMjZ2OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/VI2UC13hwWin1MIfmi/giphy.gif') repeat-x bottom;
     background-size: cover;
     z-index: 1;
