--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@ body, html {
 }
 
 .earth {
-    position: center;
+    position: absolute;
     bottom: 0;
-    width: 100vh;
+    width: 100%;
     height: 100vh;
     background: url('https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWxkdng0OGhqaG44OGZoeWZxYnkyNWZjZGd1ZmE4eWVoMzVvMjZ2OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/VI2UC13hwWin1MIfmi/giphy.gif') repeat-x bottom;
     background-size: cover;
     background-position: center;
+    background-attachment: center;
     z-index: 1;
     opacity: 0.6;
   }
